--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-notify": "github:mouse0270/bootstrap-notify",
     "filepond": "4.3.9",
     "jquery": "^1.12.4",
-    "jquery-filepond": "^1.0.0"
+    "jquery-filepond": "^1.0.0",
+    "x-editable": "^1.5.1"
   }
 }
