--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "filepond": "4.3.9",
     "jquery": "^1.12.4",
     "jquery-filepond": "^1.0.0",
-    "x-editable": "^1.5.1"
+    "x-editable": "^1.5.1",
+    "xlsx": "^0.14.3"
   }
 }
